--- a/scss/_board.scss
+++ b/scss/_board.scss
@@ -36,7 +36,7 @@ section {
 
 [class*="edit"] {
     font-size: 0;
-    margin-right: .9rem;
+    margin-right: .8rem;
     @include buttondisplays("edit", #0000ff);
 }
 
