--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -2,7 +2,7 @@ form {
     width: 50%;
     display: none;
     padding: $big_gutter;
-    position: absolute;
+    position: fixed;
     left: 25%;
     top: 25%;
     background-color:$maincolor;
